ingress/k3s-nginx-gateway-tls/manifests/05_gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway
  annotations: # 
    cert-manager.io/cluster-issuer: letsencrypt-example-tld
    #                                           ^^^^^^^^^^^
    # UPDATE the domain above
spec:
  gatewayClassName: nginx
  listeners:
  - name: http
    port: 80
    protocol: HTTP
    hostname: "test1.example.tld"
    #          ^^^^^^^^^^^^^^^^^
    # UPDATE the domain above
  - name: https
    hostname: "test1.example.tld"
    #         ^^^^^^^^^^^^^^^^^^
    # UPDATE the domain above
    port: 443
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        group: ""
        name: test1-example-tld-tls-secret
        #     ^^^^^^^^^^^^^^^^^
        # UPDATE the domain above
