ingress/k3s-nginx-gateway-tls/manifests/06_routes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kuard
spec:
  parentRefs:
  - name: gateway
    sectionName: http
  - name: gateway
    sectionName: https
  hostnames:
  - "test1.example.tld"
  #  ^^^^^^^^^^^^^^^^^
  # Update as required
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: kuard
      port: 80
